@@ -23,7 +23,6 @@ import static org.junit.Assert.assertFalse;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.anyShort;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doReturn;
@@ -199,24 +198,27 @@ public class AsyncRegistrationQueueRunnerTest {
 
     @Before
     public void before() throws RemoteException {
+        MockitoAnnotations.initMocks(this);
         mStaticMockSession =
                 ExtendedMockito.mockitoSession()
                         .spyStatic(FlagsFactory.class)
                         .strictness(Strictness.WARN)
                         .startMocking();
-        ExtendedMockito.doReturn(FlagsFactory.getFlagsForTest()).when(FlagsFactory::getFlags);
+        ExtendedMockito.doReturn(mFlags).when(FlagsFactory::getFlags);
 
         mAsyncSourceFetcher = spy(new AsyncSourceFetcher(sDefaultContext));
         mAsyncTriggerFetcher = spy(new AsyncTriggerFetcher(sDefaultContext));
         mMockedSource = spy(SourceFixture.getValidSource());
-        MockitoAnnotations.initMocks(this);
+
         when(mEnrollmentDao.getEnrollmentDataFromMeasurementUrl(any()))
                 .thenReturn(getEnrollment(DEFAULT_ENROLLMENT_ID));
         when(mContentResolver.acquireContentProviderClient(TRIGGER_URI))
                 .thenReturn(mMockContentProviderClient);
         when(mMockContentProviderClient.insert(any(), any())).thenReturn(TRIGGER_URI);
-        when(mFlags.getMeasurementDebugJoinKeyEnrollmentAllowlist()).thenReturn("");
         when(mFlags.getMeasurementMaxRegistrationRedirects()).thenReturn(20);
+        when(mFlags.getMeasurementMaxRegistrationsPerJobInvocation()).thenReturn(1);
+        when(mFlags.getMeasurementMaxRetriesPerRegistrationRequest()).thenReturn(5);
+        when(mFlags.getMeasurementDebugJoinKeyEnrollmentAllowlist()).thenReturn("");
     }
 
     @Test
@@ -243,12 +245,15 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -261,7 +266,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -301,11 +306,12 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -318,7 +324,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -328,8 +334,8 @@ public class AsyncRegistrationQueueRunnerTest {
                 .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(2)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(2))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(2, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg1 = asyncRegistrationArgumentCaptor.getAllValues().get(0);
@@ -372,11 +378,12 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -389,7 +396,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -399,8 +406,8 @@ public class AsyncRegistrationQueueRunnerTest {
                 .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
@@ -435,11 +442,12 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        List<Source.FakeReport> eventReportList = Collections.singletonList(
-                new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
+        List<Source.FakeReport> eventReportList =
+                Collections.singletonList(
+                        new Source.FakeReport(new UnsignedLong(1L), 1L, List.of(APP_DESTINATION)));
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -452,7 +460,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -462,8 +470,8 @@ public class AsyncRegistrationQueueRunnerTest {
                 .fetchSource(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertEventReport(any(EventReport.class));
         verify(mMeasurementDao, times(1)).insertSource(any(Source.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
@@ -501,7 +509,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -514,7 +522,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -523,8 +531,8 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mAsyncTriggerFetcher, times(1))
                 .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(2)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(2))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(2, asyncRegistrationArgumentCaptor.getAllValues().size());
 
@@ -571,7 +579,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -584,7 +592,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -593,8 +601,8 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mAsyncTriggerFetcher, times(1))
                 .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
 
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
 
@@ -632,7 +640,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -645,7 +653,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -654,8 +662,8 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mAsyncTriggerFetcher, times(1))
                 .fetchTrigger(any(AsyncRegistration.class), any(), any());
         verify(mMeasurementDao, times(1)).insertTrigger(any(Trigger.class));
-        verify(mMeasurementDao, times(1)).insertAsyncRegistration(
-                asyncRegistrationArgumentCaptor.capture());
+        verify(mMeasurementDao, times(1))
+                .insertAsyncRegistration(asyncRegistrationArgumentCaptor.capture());
         Assert.assertEquals(1, asyncRegistrationArgumentCaptor.getAllValues().size());
         AsyncRegistration asyncReg = asyncRegistrationArgumentCaptor.getAllValues().get(0);
         Assert.assertEquals(Uri.parse(LOCATION_TYPE_REDIRECT_URI), asyncReg.getRegistrationUri());
@@ -693,7 +701,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -706,7 +714,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         ArgumentCaptor<AsyncRegistration> asyncRegistrationArgumentCaptor =
                 ArgumentCaptor.forClass(AsyncRegistration.class);
@@ -758,7 +766,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -771,7 +779,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -803,17 +811,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -845,17 +856,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -894,17 +908,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -944,11 +961,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -985,7 +1002,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         KeyValueData redirectCount =
@@ -999,7 +1016,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1032,11 +1049,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1067,11 +1084,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1108,11 +1125,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1155,7 +1172,7 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
         KeyValueData redirectCount =
                 new KeyValueData.Builder()
@@ -1168,7 +1185,7 @@ public class AsyncRegistrationQueueRunnerTest {
         when(mMeasurementDao.getKeyValueData(anyString(), any())).thenReturn(redirectCount);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1212,16 +1229,19 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1252,17 +1272,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1300,11 +1323,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1342,17 +1365,20 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncSourceFetcher)
                 .fetchSource(any(), any(), any());
 
-        Source.FakeReport sf = new Source.FakeReport(
-                new UnsignedLong(1L), 1L, List.of(WebUtil.validUri("https://example.test/sF")));
+        Source.FakeReport sf =
+                new Source.FakeReport(
+                        new UnsignedLong(1L),
+                        1L,
+                        List.of(WebUtil.validUri("https://example.test/sF")));
         List<Source.FakeReport> eventReportList = Collections.singletonList(sf);
         when(mMockedSource.assignAttributionModeAndGenerateFakeReports())
                 .thenReturn(eventReportList);
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncSourceFetcher, times(1))
@@ -1371,7 +1397,7 @@ public class AsyncRegistrationQueueRunnerTest {
         AsyncRegistrationQueueRunner asyncRegistrationQueueRunner =
                 getSpyAsyncRegistrationQueueRunner();
 
-        AsyncRegistration validAsyncRegistration =  createAsyncRegistrationForWebTrigger();
+        AsyncRegistration validAsyncRegistration = createAsyncRegistrationForWebTrigger();
 
         Answer<?> answerAsyncTriggerFetcher =
                 invocation -> {
@@ -1383,11 +1409,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1417,11 +1443,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1458,11 +1484,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1499,11 +1525,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 .when(mAsyncTriggerFetcher)
                 .fetchTrigger(any(), any(), any());
 
-        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyShort(), any()))
+        when(mMeasurementDao.fetchNextQueuedAsyncRegistration(anyInt(), any()))
                 .thenReturn(validAsyncRegistration);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(1L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertions
         verify(mAsyncTriggerFetcher, times(1))
@@ -1513,6 +1539,7 @@ public class AsyncRegistrationQueueRunnerTest {
         verify(mMeasurementDao, never()).insertAsyncRegistration(any(AsyncRegistration.class));
         verify(mMeasurementDao, times(1)).deleteAsyncRegistration(any(String.class));
     }
+
     @Test
     public void insertSource_withFakeReportsFalseAppAttribution_accountsForFakeReportAttribution()
             throws DatastoreException {
@@ -2092,10 +2119,11 @@ public class AsyncRegistrationQueueRunnerTest {
                 APP_TOP_ORIGIN,
                 100,
                 Source.SourceType.NAVIGATION,
-                datastoreManager);
+                datastoreManager,
+                mContentResolver);
 
         // Execution
-        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker(2L, (short) 5);
+        asyncRegistrationQueueRunner.runAsyncRegistrationQueueWorker();
 
         // Assertion
         verify(datastoreManager, times(2)).runInTransaction(consumerArgCaptor.capture());
